Bug 1117593 - Fix handling of impossible cases in txEarlyEvalContext. r=peterv.

--HG--
extra : rebase_source : 81b5ca2299a8460ed3d46a7847d4dcafa042b575